kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: account-${account}
  name: static-site-${account}-${domain_clean}
  labels:
    role: static-site
    account: ${account}
    domain: ${domain}
spec:
  replicas: 1
  selector:
    matchLabels:
      role: static-site
      account: ${account}
      domain: ${domain}
  template:
    metadata:
      labels:
        role: static-site
        account: ${account}
        domain: ${domain}
    spec:
      containers:
      - name: static-site
        image: "${hashed_tag}"
