kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${account}
  name: static-site-${account}-${domain_clean}
  labels:
    role: static-site
    account: ${account}
    domain: ${domain}
spec:
  selector:
    role: static-site
    account: ${account}
    domain: ${domain}
  ports:
  - name: http
    port: ${port}
    protocol: TCP
