kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${account}
  name: static-site-${account}-${domain_clean}
spec:
  rules:
  - host: ${domain}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: static-site-${account}-${domain_clean}
            port: 
              number: ${port}
